--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -65,28 +65,28 @@
             </div>
           </div>
           <div class="col-xl-3 col-md-6">
-            <div class="card card-stats shadow mb-4 mb-xl-0">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col">
-                    <h5 class="card-title text-uppercase text-muted mb-0">School Fees</h5>
-                    <span class="h2 font-weight-bold mb-0">350,897</span>
-                  </div>
-                  <div class="col-auto">
-                    <div class="icon icon-shape bg-info text-white rounded-circle shadow">
-                      <i class="fas fa-wallet"></i>
+              <div class="card card-stats shadow mb-4 mb-xl-0">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col">
+                      <h5 class="card-title text-uppercase text-muted mb-0">Classes</h5>
+                      <span class="h2 font-weight-bold mb-0">350,897</span>
+                    </div>
+                    <div class="col-auto">
+                      <div class="icon icon-shape bg-info text-white rounded-circle shadow">
+                        <i class="fas fa-users"></i>
+                      </div>
                     </div>
                   </div>
+                  <p class="mt-3 mb-0 text-muted text-sm">
+                    <a [routerLink]="['/classes']"><span class="text-warning mr-2"><i class="fa fa-arrow-right"></i> View</span></a>
+                  </p>
                 </div>
-                <p class="mt-3 mb-0 text-muted text-sm">
-                  <a [routerLink]="['/fees']"><span class="text-warning mr-2"><i class="fa fa-arrow-right"></i> View</span></a>
-                </p>
               </div>
             </div>
-          </div>
         </div>
         <div class="row pt-5">
-          <div class="col-xl-3 col-md-6">
+          <div class="col-xl-3 col-md-6" *ngIf="!isParentorStudent">
             <div class="card card-stats shadow mb-4 mb-xl-0">
               <div class="card-body">
                 <div class="row">
@@ -106,6 +106,26 @@
               </div>
             </div>
           </div>
+          <div class="col-xl-3 col-md-6" *ngIf="isParentorStudent">
+              <div class="card card-stats shadow mb-4 mb-xl-0">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col">
+                      <h5 class="card-title text-uppercase text-muted mb-0">Materials</h5>
+                      <span class="h2 font-weight-bold mb-0">350,897</span>
+                    </div>
+                    <div class="col-auto">
+                      <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
+                        <i class="fas fa-book"></i>
+                      </div>
+                    </div>
+                  </div>
+                  <p class="mt-3 mb-0 text-muted text-sm">
+                    <a [routerLink]="['/materials']"><span class="text-warning mr-2"><i class="fa fa-arrow-right"></i> View</span></a>
+                  </p>
+                </div>
+              </div>
+            </div>
           <div class="col-xl-3 col-md-6">
             <div class="card card-stats shadow mb-4 mb-xl-0">
               <div class="card-body">
@@ -127,25 +147,25 @@
             </div>
           </div>
           <div class="col-xl-3 col-md-6">
-            <div class="card card-stats shadow mb-4 mb-xl-0">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col">
-                    <h5 class="card-title text-uppercase text-muted mb-0">Classes</h5>
-                    <span class="h2 font-weight-bold mb-0">350,897</span>
-                  </div>
-                  <div class="col-auto">
-                    <div class="icon icon-shape bg-info text-white rounded-circle shadow">
-                      <i class="fas fa-users"></i>
+              <div class="card card-stats shadow mb-4 mb-xl-0">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col">
+                      <h5 class="card-title text-uppercase text-muted mb-0">School Fees</h5>
+                      <span class="h2 font-weight-bold mb-0">350,897</span>
+                    </div>
+                    <div class="col-auto">
+                      <div class="icon icon-shape bg-info text-white rounded-circle shadow">
+                        <i class="fas fa-wallet"></i>
+                      </div>
                     </div>
                   </div>
+                  <p class="mt-3 mb-0 text-muted text-sm">
+                    <a [routerLink]="['/payments']"><span class="text-warning mr-2"><i class="fa fa-arrow-right"></i> View</span></a>
+                  </p>
                 </div>
-                <p class="mt-3 mb-0 text-muted text-sm">
-                  <a [routerLink]="['/classes']"><span class="text-warning mr-2"><i class="fa fa-arrow-right"></i> View</span></a>
-                </p>
               </div>
             </div>
-          </div>
           <div class="col-xl-3 col-md-6">
             <div class="card card-stats shadow mb-4 mb-xl-0">
               <div class="card-body">
