--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -1,6 +1,6 @@
 <aside class="left-sidebar" style="background-color: #3d3d3d;">
   <!-- Sidebar scroll-->
-  <div class="scroll-sidebar" *ngIf="loggedIn" style="background-color: #3d3d3d;">
+  <div class="scroll-sidebar" style="background-color: #3d3d3d;">
       <!-- Sidebar navigation-->
       <nav class="sidebar-nav">
           <ul id="sidebarnav" style="background: #3d3d3d;">
