--- a/src/app/components/subjects/subjects.component.html
+++ b/src/app/components/subjects/subjects.component.html
@@ -7,7 +7,7 @@
               <div class="row">
                   <div class="col-6"> <h2 class="card-title">{{sub.name}}</h2> </div>
                 <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                <div class="col-6"> <a href="/subjects?subject={{sub.id}}" (click)='ngOnInit()' class="btn btn-primary btn-sm float-right mr-3" style="font-size:15px;">View</a></div>
+                <div class="col-6"> <a href="/subjects?subject={{sub.id}}" class="btn btn-primary btn-sm float-right mr-3" style="font-size:15px;">View</a></div>
               </div>
           </div>
         </div>
