--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="header-body text-center mb-7">
         <div class="row justify-content-center">
-          <div class="col-lg-5 col-md-6">
+          <div class="col-lg-5 col-md-6 mt-5">
             <h1 class="text-white">Welcome!</h1>
           </div>
         </div>
@@ -101,7 +101,7 @@
 
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary" (click)='addModalSubmit()' [disabled]="!editPermissionForm.valid">Save changes</button>
+        <button type="button" class="btn btn-primary" (click)='addModalSubmit()' [disabled]="!editPermissionForm.valid">Select</button>
         <button type="button" class="btn btn-secondary" (click)='closeAddModal()'>Close</button>
       </div>
     </div>
